--- a/postoffice/.isort.cfg
+++ b/postoffice/.isort.cfg
@@ -14,7 +14,7 @@ known_first_party=\
     core,\
     sections,\
     topics,
-known_third_party=pytest,
+known_third_party=pytest,rules
 line_length=99
 order_by_type=1
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
